| Summary: | ASTERISK-27014: configurable busy_timeout in sqlite backends | ||
| Reporter: | Marek Cervenka (cervajs) | Labels: | |
| Date Opened: | 2017-05-23 09:41:37 | Date Closed: | 2017-06-01 09:32:56 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.15.0 14.4.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | sqlite is not designed for concurrency
workarounds are wal - https://www.sqlite.org/wal.html . can be specified when creating DB with "pragma journal_mode=wal" and busy_timeout https://www.sqlite.org/c3ref/busy_timeout.html . MUST be specified per connection busy_timeout is hardcoded in queue_log and cel sqlite backends sqlite3_busy_timeout(db->handle, 1000); we prepared patch where this parameter can be configured | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-05-23 09:41:38.682-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-06-01 09:32:57.228-0500 Change 5695 merged by Jenkins2: Sqlite3: make busy_timeout configurable. [https://gerrit.asterisk.org/5695|https://gerrit.asterisk.org/5695] | ||